# bone-fun

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  dfx.json
bone-frontend/: index.html  package-lock.json  package.json  vite.config.ts
bone-frontend/artemis-web3-adapter/: package.json
bone-frontend/artemis-web3-adapter/src/: index.js
bone-frontend/artemis-web3-adapter/src/wallets/: plug.js
bone-frontend/assets/.well-known/: ic-domains
bone-frontend/config/: development_canister_ids.json  production_canister.ids.json
bone-frontend/src/: App.tsx  main.less  main.tsx
bone-frontend/src/api/: ICPPrice.ts  bone.ts  bone_dog.ts  bone_main.ts  dogmi.ts  icp.ts
bone-frontend/src/layout/: header.tsx  index.module.less  phone.less
bone-frontend/src/routes/: Routing.tsx
bone-frontend/src/store/: app.ts
bone-frontend/src/utils/: account.ts  common.ts  constants.ts  env.ts  principal.ts
canisterId/local/: canister_ids.json
canisterId/pro/: canister_ids.json
src/bone_dog/: Cargo.toml  bone_dog.did
src/bone_dog/src/: main.rs
src/bone_lib/: Cargo.toml
src/bone_lib/src/: guard.rs  lib.rs  utils.rs
src/bone_lib/src/interface/: idog.rs  imain.rs  itoken.rs  mod.rs
src/bone_lib/src/types/: bone_dog_types.rs  bone_main_types.rs  mod.rs
src/bone_main/: Cargo.toml
src/bone_main/src/: main.rs
src/declarations/bone/: index.d.ts  index.js
src/declarations/bone_dog/: bone_dog.did.d.ts  bone_dog.did.js  index.d.ts  index.js
src/declarations/bone_main/: bone_main.did  bone_main.did.d.ts  bone_main.did.js  index.d.ts  index.js
src/declarations/dogmi/: index.d.ts  index.js
token/candid/: icrc2_rust_ledger.did
(+28 files in other folders)
