[package]
name = "bone_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-stable-structures = "0.5.6"
ic-cdk = "0.12.2"
ic-cdk-macros = "0.8.1"
ic-ledger-types = "0.10.0"
candid = { version = "0.10.6" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
fxhash = "0.2"
sha2 = "0.10"
num-bigint = "0.4.2"
regex = "1"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
