[package]
name = "bone_main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bone_main"
path = "src/main.rs"

[dependencies]
ic-cdk = "0.12.2"
ic-cdk-macros = "0.8.1"
ic-ledger-types = "0.10.0"
ic-stable-structures = "0.5.6"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
candid = { version = "0.10.6" }
ic-cdk-timers = "0.7.0"
bone_lib = { path = '../bone_lib', version = '0.1.0' }

[features]
local = []
pro = []

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
